cherts/fluent: debug

--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -53,6 +53,10 @@ fluentbit:
     labels:
       fluentbit: "main"
     clusterOutputs:
+      kube-system:
+        match: "kube.pods.kube-system.*"
+        stdout:
+          format: json
       systemd:
         match: "systemd.*"
         retry_limit: "no_limits"
